[tool.poetry]
name = "heap-my-way"
version = "0.1.0"
description = "Use heap to find shortest path"
authors = ["LuckyDams <luckydams@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LuckyDams/heap-my-way"
repository = "https://github.com/LuckyDams/heap-my-way"
keywords = ["heap", "shortest path"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
heap-my-way = "heap_my_way:main"